# project_2_python_postgresql_swagger_sqlalchemy_massalow/controllers/user.py
@@ -5,7 +5,12 @@
 """
 
 # 3rd party library
-from flask import Flask, jsonify, request
+from flask import Flask, jsonify, request, make_response, abort
+
+# Personal Party
+from config import db
+from models.user import User, UserSchema
+from controllers.status import *
 
 fake_data_users = [
     {
@@ -113,46 +118,85 @@ fake_resource = [
 def get_all_user(page_number=1, page_size=20):
     """
     This function handle request: /api/user - GET
+    with the complete lists of people
 
     :param id:          id of user to find
-    :return:            user
+    :return:            json of array people
     """
+    list_user = User.query.paginate(page_number, page_size, False).items
+    schema = UserSchema(many=True)
 
-    print("page numer and pagesize", page_number, page_size)
-    return fake_data_users
+    total_rows = User.query.order_by(User.user_id).count()
+    data = schema.dump(list_user).data
+
+    print("page numer and pagesize", page_number, page_size, data)
+    return jsonify({"result": data, "total_rows": total_rows})
 
 
 def create(user):
     """
     This function handle request: /api/user - POST
+    create new user
+
+    :return:            user
+    """
+    schema = UserSchema()
+    new_user = schema.load(user, session=db.session).data
+
+    # Step 1: Create dict of User
+    if isinstance(new_user, str):
+        print('new_user str', new_user)
+    if isinstance(new_user, dict):
+        usr_model = User()
+        print('new_user dict', new_user)
+
+        for k, v in new_user.items():
+            usr_model.__dict__[k] = v
+            print("  key :", k)
+            print("  value :", v)
+
+        new_user = usr_model
+    else:
+        print(" Request is not Dict ")
+    print("request form", schema.dump(new_user).data)
+
+    # Step 2: Check user exist
+    is_exist_user_in_db = User.query.filter(
+        User.username == user["username"]).one_or_none()
+    if is_exist_user_in_db is None:
+        db.session.add(new_user)
+        db.session.commit()
+        return schema.dump(new_user).data, HTTP_201_CREATED
+    else:
+        abort(HTTP_409_CONFLICT, "Username already exist {username}".format(
+            username=user["username"]))
+
+
+def get_one(username):
+    """
+    This function handle request: /api/user/{username} - GET
 
     :param id:          id of user to find
     :return:            user
     """
-    print("request form", user)
-    fake_data_users.append(user)
-    return fake_data_users
+    schema = UserSchema()
+    user = User.query.filter(User.username == username).one_or_none()
+    print(user)
+    # check user exist
+    if user is not None:
+        # Serialize the data for the response
+        data = schema.dump(user).data
+        print(data)
+        return jsonify({"result": data})
+    else:
+        abort(HTTP_404_NOT_FOUND, f"User not found for: {username}")
 
 
-def get_one(id):
+def delete(username):
     """
-    This function handle request: /api/user/{id} - GET
+    This function handle request: /api/user/{username} - DELETE
 
-    :param id:          id of user to find
-    :return:            user
-    """
-    for user in fake_data_users:
-        print(user)
-        if(user["id"] == id):
-            return user
-    return "Not found"
-
-
-def delete(id):
-    """
-    This function handle request: /api/user/{id} - DELETE
-
-    :param id:          id of user to find
+    :param username:    name of user to find
     :return:            user
     """
     for user in fake_data_users:
@@ -201,3 +245,45 @@ def logout():
     :return:            Logout  
     """
     return "Logout Success"
+
+
+def tree_user(id):
+    """
+    This function handle request: /api/user/tree_user/{id} - GET
+
+    :return:            Logout  
+    """
+    schema = UserSchema(many=True)
+    user_list = User.query.all()
+    # Serialize the data for the response
+    data = schema.dump(user_list).data
+
+    return generate_tree_user_from_list_user(data)
+
+
+def generate_tree_user_from_list_user(list_user):
+    """
+    Generate tree user from list user
+
+    :return:            tree user  
+    """
+    user_tree = []
+    for user in list_user:
+        user["label"] = 0
+    print(list_user)
+    for user1 in list_user:
+        if user1["superior_id"] is None and user1["label"] == 0:
+            user1["label"] = 1
+            user1["subordinate"] = []
+            for user2 in list_user:
+                if user2["label"] == 0 and user2["superior_id"] == user1["user_id"]:
+                    user2["label"] = 1
+                    user2["subordinate"] = []
+                    for user3 in list_user:
+                        if user3["label"] == 0 and user3["superior_id"] == user2["user_id"]:
+                            user2["subordinate"].append(user3)
+
+                    user1["subordinate"].append(user2)
+
+            user_tree.append(user1)
+    return user_tree
